--- a/intex.html
+++ b/intex.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>salom dunyo...</h1>
+    <h1>Welcome to My Simple Page</h1>
 </body>
 </html>
+<H1>Welcome to My Simple Page<H1>
+<P>This is a simple HTML page that shovsna heading, a paragraph,and an Image.</P>
+<h2>My Favorite Image </h2>
+<img src="" alt="" srcset="">
